<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sviostali.e_dnevnik.Activitys.ChangeInfo">

    <EditText
        android:id="@+id/etCIname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/imechangeinfo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCILastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prezimechangeinfo"
        android:inputType="textPersonName"
        android:layout_below="@+id/etCIname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etCIDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/changeinfobirth_date"
        android:inputType="datetime"
        android:layout_below="@+id/etCILastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btnCIchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/a_urirajchangeinfo"
        android:layout_below="@+id/etCIDate"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etCIAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCIDate"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/avatar_changeinfo"
        android:inputType="textPersonName" />

</RelativeLayout>
