<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sviostali.e_dnevnik.Activitys.ChangePassword">

    <EditText
        android:id="@+id/etCP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/unesi_staru_sifru"
        android:maxLength="8"
        android:inputType="number" />

    <EditText
        android:id="@+id/etCP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCP1"
        android:layout_alignStart="@+id/etCP1"
        android:layout_below="@+id/etCP1"
        android:layout_marginTop="5dp"
        android:maxLength="8"
        android:ems="10"
        android:hint="@string/unesi_novu_sifru"
        android:inputType="number" />

    <EditText
        android:id="@+id/etCP3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCP2"
        android:maxLength="8"
        android:layout_alignStart="@+id/etCP2"
        android:layout_below="@+id/etCP2"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/ponovi_novu_sifru"
        android:inputType="number" />

    <Button
        android:id="@+id/btnCP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/promjenichangepass"
        android:layout_below="@+id/etCP3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
