<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sviostali.e_dnevnik.Activitys.Login">

    <EditText
        android:id="@+id/etLUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLUsername"
        android:layout_alignStart="@+id/etLUsername"
        android:layout_below="@+id/etLUsername"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btnLBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etLPassword"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/login_bBack" />

    <Button
        android:id="@+id/btnLLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etLPassword"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/login_bLogin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnLBack"
        android:layout_marginTop="34dp"
        android:text="  Nemate korisnički račun? "
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="Registrirajte se."
        android:textColor="@color/buttonColor"
        android:textStyle="bold" />

</RelativeLayout>
